@@ -1,3 +1,8 @@
+shmuel 21.02.2014 20:43:53 +0200 - build 293
+
+1. LuaFAR: автоматическая вставка <plugin_path>\?.lua в package.path больше не производится.
+   Те LuaFAR-плагины, которым это надо, должны об этом позаботиться сами.
+
 shmuel 19.02.2014 16:22:00 +0200 - build 292
 
 1. Fix: в функции eval при исполнении скрипта-файла (@<filename> [<params>]),
